# pitline-corner-backend

./: .env.example  .gitignore  Dockerfile  OPTIMISATION_COMPLETE.md  README.md  alembic.ini  import_f1_data.py  init_db.py  pyproject.toml  render.yaml  requirements.txt  test_basic_app.py  test_structure.py  verify_setup.py
.github/workflows/: ci.yml
alembic/: env.py
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: auth.py  f1.py  health.py
app/api/dependencies/: common.py  database.py
app/core/: config.py  database.py  redis.py  security.py
app/crud/: __init__.py  user.py
app/models/: __init__.py  f1.py  user.py
app/repositories/: base.py  f1.py  user.py
app/schemas/: __init__.py  common.py  f1.py  user.py
app/services/: f1.py  fastf1_optimized.py  jolpica_legacy.py.bak  tracing_insights.py  user.py
app/services/strategy/: __init__.py
app/services/strategy/defend/: __init__.py  calculator.py
app/services/strategy/overtake/: __init__.py  calculator.py
app/services/strategy/pit_stop/: __init__.py  calculator.py
app/services/strategy/weather/: __init__.py  calculator.py
app/utils/: common.py
scripts/: auto_import_race.py  prototype_csv_parser.py  seed_2024_races.py  test_endpoint.py  test_import.py  test_service.py
tests/: test_auth.py  test_main.py
